<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_back">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:textSize="20sp"
            android:id="@+id/id_start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_start"
            android:background="#00ffffff"/>
        <Button
            android:textSize="20sp"
            android:id="@+id/id_hitory_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_history"
            android:background="#00ffffff"/>
        <Button
            android:textSize="20sp"
            android:id="@+id/id_desciption_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_decription"
            android:background="#00ffffff"/>
    </LinearLayout>
</LinearLayout>