<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@drawable/orange_button"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/pass_one"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/score_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/gray_button"
            android:gravity="center"
            android:text="@string/score_str"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/scroe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_title"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/light_orange_button"
            android:gravity="center"
            android:text="10000"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/record_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/gray_button"
            android:gravity="center"
            android:text="@string/record_str"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/record_title"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/light_orange_button"
            android:gravity="center"
            android:text="20000"
            android:textSize="15sp" />
    </RelativeLayout>
</LinearLayout>